# skylark_assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh
app/: agent.py  config.py  main.py  models.py  tools.py
app/services/: assignment_service.py  conflict_detector.py  sheets_service.py  sheets_services.py
ui/: streamlit_app.py
