[project]
name = "skylark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.6",
    "google-auth>=2.48.0",
    "google-genai>=1.62.0",
    "groq>=1.0.0",
    "gspread>=6.2.1",
    "httpx>=0.28.1",
    "oauth2client>=4.1.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
]
